--- a/src/main/resources/com/fitj/home-view.fxml
+++ b/src/main/resources/com/fitj/home-view.fxml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.ControllerHome">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.ControllerHome">
    <children>
-      <ImageView fitHeight="641.0" fitWidth="954.0" layoutX="23.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../img/home_image.png" />
-         </image>
-      </ImageView>
-      <Pane layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
-         <children>
-            <Button fx:id="loginButton" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToLogin" style="-fx-background-color: #054371;" text="Se connecter" textFill="WHITE" />
-            <Button fx:id="registerButton" layoutX="807.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
-            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../img/logo.png" />
-               </image>
-            </ImageView>
-         </children>
-      </Pane>
+      <Pane layoutY="51.0" prefHeight="46.0" prefWidth="600.0" style="-fx-border-color: black;" />
+      <Text layoutX="141.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Page principal" wrappingWidth="331.7366943359375" />
    </children>
-</Pane>
+</AnchorPane>
