--- a/src/main/resources/com/fitj/login-view.fxml
+++ b/src/main/resources/com/fitj/login-view.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.ControllerLogin">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerLogin">
    <children>
       <Pane layoutX="325.0" layoutY="279.0" prefHeight="244.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black;">
          <children>
-            <TextField fx:id="login" layoutX="54.0" layoutY="43.0" prefHeight="25.0" prefWidth="234.0" />
+            <TextField fx:id="username" layoutX="54.0" layoutY="43.0" prefHeight="25.0" prefWidth="234.0" />
             <Text fill="#243fa1" layoutX="54.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Identifiant" wrappingWidth="92.13671875" />
             <Text fill="#375ada" layoutX="54.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
             <TextField fx:id="password" layoutX="54.0" layoutY="103.0" prefHeight="25.0" prefWidth="234.0" />
-            <Button fx:id="connect" layoutX="96.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonConnect" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Me connecter" textFill="WHITE">
+            <Button fx:id="loginButton" layoutX="96.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonConnect" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Me connecter" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
@@ -25,11 +25,11 @@
             <Font size="28.0" />
          </font>
       </Text>
-      <Button fx:id="nouveau" layoutX="441.0" layoutY="542.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="25.0" prefWidth="119.0" style="-fx-background-color: #054371;" text="NOUVEAU ?" textFill="WHITE" />
+      <Button fx:id="registerButton" layoutX="441.0" layoutY="542.0" mnemonicParsing="false" onAction="#goToRegister" prefHeight="25.0" prefWidth="119.0" style="-fx-background-color: #054371;" text="NOUVEAU ?" textFill="WHITE" />
       <Pane layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
          <children>
-            <Button layoutX="897.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Se connecter" textFill="WHITE" />
-            <Button fx:id="nouveauHeaderButton" layoutX="807.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
+            <Button fx:id="loginHeaderButton" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Se connecter" textFill="WHITE" />
+            <Button fx:id="registerHeaderButton" layoutX="807.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../img/logo.png" />
@@ -37,6 +37,6 @@
             </ImageView>
          </children>
       </Pane>
-      <Button fx:id="homeButton" layoutX="464.0" layoutY="760.0" mnemonicParsing="false" onAction="#goToHome" style="-fx-background-color: #054371;" text="&lt;&lt; Retour" textFill="WHITE" />
+      <Button fx:id="visitorButton" layoutX="464.0" layoutY="760.0" mnemonicParsing="false" onAction="#goToVisitor" style="-fx-background-color: #054371;" text="&lt;&lt; Retour" textFill="WHITE" />
    </children>
 </AnchorPane>
