--- a/src/main/resources/com/fitj/components/header-home.fxml
+++ b/src/main/resources/com/fitj/components/header-home.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
@@ -8,6 +9,9 @@
    <children>
       <Button layoutX="897.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: #054371;" text="Se connecter" textFill="WHITE" />
       <Button layoutX="807.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
-      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../img/logo.png" />
+         </image></ImageView>
    </children>
 </Pane>
