--- a/src/main/resources/com/fitj/client/home-client.fxml
+++ b/src/main/resources/com/fitj/client/home-client.fxml
@@ -9,15 +9,15 @@
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
          <children>
-            <Button layoutX="897.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: red;" text="MON COMPTE" textFill="WHITE" />
-            <Button layoutX="822.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: #054371;" text="COACHS" textFill="WHITE" />
+            <Button fx:id="monCompte" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color: red;" text="MON COMPTE" textFill="WHITE" />
+            <Button fx:id="coachs" layoutX="822.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: #054371;" text="COACHS" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../img/logo.png" />
+                  <Image url="@../../../img/logo.png" />
                </image>
             </ImageView>
-            <Button layoutX="613.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
-            <Button layoutX="746.0" layoutY="15.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
+            <Button fx:id="monEspace" layoutX="618.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEscpace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
+            <Button fx:id="shop" layoutX="748.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
          </children>
       </Pane>
    </children>
