--- a/src/main/resources/com/fitj/user/register-view.fxml
+++ b/src/main/resources/com/fitj/user/register-view.fxml
@@ -48,7 +48,7 @@
             <Button layoutX="807.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Nouveau ?" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../img/logo.png" />
+                  <Image url="@../../../img/logo.png" />
                </image>
             </ImageView>
          </children>
