--- a/src/main/resources/com/fitj/user/visitor-view.fxml
+++ b/src/main/resources/com/fitj/user/visitor-view.fxml
@@ -8,7 +8,7 @@
    <children>
       <ImageView fitHeight="641.0" fitWidth="954.0" layoutX="23.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../img/home_image.png" />
+            <Image url="@../../../img/home_image.png" />
          </image>
       </ImageView>
       <Pane layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
@@ -17,7 +17,7 @@
             <Button fx:id="registerButton" layoutX="807.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToRegister" style="-fx-background-color: #054371;" text="Nouveau ?" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../img/logo.png" />
+                  <Image url="@../../../img/logo.png" />
                </image>
             </ImageView>
          </children>
