--- a/src/main/resources/com/fitj/client/coachs-client.fxml
+++ b/src/main/resources/com/fitj/client/coachs-client.fxml
@@ -16,7 +16,7 @@
                   <Image url="@../../../img/logo.png" />
                </image>
             </ImageView>
-            <Button fx:id="monEspace" layoutX="618.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEscpace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
+            <Button fx:id="monEspace" layoutX="618.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
             <Button fx:id="shop" layoutX="748.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
          </children>
       </Pane>
