--- a/src/main/resources/com/fitj/users/register-view.fxml
+++ b/src/main/resources/com/fitj/users/register-view.fxml
@@ -7,27 +7,34 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerRegister">
     <children>
-        <Pane layoutX="325.0" layoutY="171.0" prefHeight="492.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black;">
+        <Pane layoutX="325.0" layoutY="171.0" prefHeight="492.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
             <children>
                 <TextField fx:id="mail" layoutX="59.0" layoutY="39.0" prefHeight="25.0" prefWidth="234.0" />
                 <Text fill="#054371" layoutX="59.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse mail" wrappingWidth="92.13671875" />
                 <Text fill="#054371" layoutX="59.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pseudo" wrappingWidth="92.13671875" />
                 <TextField fx:id="pseudo" layoutX="59.0" layoutY="88.0" prefHeight="25.0" prefWidth="234.0" />
-                <Button fx:id="goToHome" layoutX="97.0" layoutY="449.0" mnemonicParsing="false" onAction="#handleButtonRegister" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Créer mon compte" textFill="WHITE">
+                <Button fx:id="registerButton" layoutX="97.0" layoutY="449.0" mnemonicParsing="false" onAction="#handleButtonRegister" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Créer mon compte" textFill="WHITE">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
                 <Text fx:id="errorMessage" fill="RED" layoutX="30.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
-                <TextField fx:id="password" layoutX="59.0" layoutY="303.0" prefHeight="25.0" prefWidth="234.0" />
                 <Text fill="#054371" layoutX="59.0" layoutY="299.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
-                <TextField fx:id="passwordConfirm" layoutX="59.0" layoutY="357.0" prefHeight="25.0" prefWidth="234.0" />
                 <Text fill="#054371" layoutX="59.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmation de mot de passe" wrappingWidth="170.5367431640625" />
             <Text fill="#054371" layoutX="59.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Poids" wrappingWidth="92.13671875" />
             <Text fill="#054371" layoutX="59.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Taille" wrappingWidth="92.13671875" />
-            <Slider fx:id="poidsSlider" blockIncrement="1.0" layoutX="60.0" layoutY="138.0" majorTickUnit="5.0" max="150.0" min="35.0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="70.0" />
-            <Slider fx:id="tailleSlider" blockIncrement="1.0" layoutX="59.0" layoutY="191.0" majorTickUnit="10.0" max="220.0" min="120.0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" value="170.0" />
-            <Text fill="#054371" layoutX="59.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexe" wrappingWidth="92.13671875" />
+            <Slider fx:id="poidsSlider" blockIncrement="1.0" cache="true" layoutX="60.0" layoutY="138.0" majorTickUnit="1.0" max="150.0" min="35.0" minorTickCount="0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="70.0" />
+                <TextField layoutX="235.0" layoutY="119.0" prefHeight="20.0" prefWidth="44.0" style="-fx-background-color: transparent;" text="${poidsSlider.value}">
+               <font>
+                  <Font size="10.0" />
+               </font></TextField>
+            <Slider fx:id="tailleSlider" blockIncrement="1.0" cache="true" layoutX="59.0" layoutY="191.0" majorTickUnit="1.0" max="220.0" min="120.0" minorTickCount="0" prefHeight="15.0" prefWidth="234.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="170.0" />
+                <TextField layoutX="237.0" layoutY="174.0" prefHeight="20.0" prefWidth="44.0" style="-fx-background-color: transparent;" text="${tailleSlider.value}">
+               <font>
+                  <Font size="10.0" />
+               </font></TextField>
+
+                <Text fill="#054371" layoutX="59.0" layoutY="245.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sexe" wrappingWidth="92.13671875" />
             <RadioButton fx:id="hommeRadio" layoutX="59.0" layoutY="257.0" mnemonicParsing="false" selected="true" text="Homme" textFill="#054371">
                <toggleGroup>
                   <ToggleGroup fx:id="sex" />
@@ -35,6 +42,20 @@
             </RadioButton>
             <RadioButton fx:id="femmeRadio" layoutX="145.0" layoutY="257.0" mnemonicParsing="false" text="Femme" textFill="#054371" toggleGroup="$sex" />
             <RadioButton fx:id="autreRadio" layoutX="240.0" layoutY="257.0" mnemonicParsing="false" text="Autre" textFill="#054371" toggleGroup="$sex" />
+            <Text fill="#054371" layoutX="59.0" layoutY="402.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lien de la photo de profil" wrappingWidth="170.5367431640625" />
+            <TextField fx:id="photoProfil" layoutX="59.0" layoutY="405.0" prefHeight="26.0" prefWidth="234.0" />
+            <PasswordField fx:id="password" layoutX="59.0" layoutY="303.0" prefHeight="26.0" prefWidth="234.0" />
+            <PasswordField fx:id="passwordConfirm" layoutX="59.0" layoutY="355.0" prefHeight="26.0" prefWidth="234.0" />
+            <Text fill="#054371" layoutX="282.0" layoutY="133.0" strokeType="OUTSIDE" strokeWidth="0.0" text="kg">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Text>
+            <Text fill="#054371" layoutX="282.0" layoutY="187.0" strokeType="OUTSIDE" strokeWidth="0.0" text="cm">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Text>
             </children></Pane>
         <Text layoutX="412.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inscription" textAlignment="CENTER" wrappingWidth="178.13671875">
             <font>
