--- a/src/main/resources/com/fitj/users/login-view.fxml
+++ b/src/main/resources/com/fitj/users/login-view.fxml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerLogin">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerLogin">
    <children>
       <Pane layoutX="325.0" layoutY="279.0" prefHeight="244.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
          <children>
             <TextField fx:id="username" layoutX="54.0" layoutY="43.0" prefHeight="25.0" prefWidth="234.0" />
+            <PasswordField fx:id="password" layoutX="54.0" layoutY="109.0" prefHeight="26.0" prefWidth="234.0" />
             <Text fill="#054371" layoutX="54.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Identifiant" wrappingWidth="92.13671875" />
             <Text fill="#054371" layoutX="54.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
             <Button fx:id="loginButton" layoutX="96.0" layoutY="188.0" mnemonicParsing="false" onAction="#handleButtonConnect" prefHeight="25.0" prefWidth="159.0" style="-fx-background-color: red;" text="Me connecter" textFill="WHITE">
@@ -23,7 +19,6 @@
                </font>
             </Button>
             <Text fx:id="errorMessage" fill="RED" layoutX="30.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
-            <PasswordField fx:id="password" layoutX="54.0" layoutY="109.0" prefHeight="26.0" prefWidth="234.0" />
          </children></Pane>
       <Text layoutX="411.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Connexion" textAlignment="CENTER" wrappingWidth="178.13671875">
          <font>
