--- a/src/main/resources/com/fitj/views/admins/coachs-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/coachs-admin.fxml
@@ -5,18 +5,18 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerMonEspace">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerCoachs">
    <children>
       <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
          <children>
             <Button fx:id="monCompte" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color:  #054371;" text="MON COMPTE" textFill="WHITE" />
-            <Button fx:id="coachs" layoutX="822.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color:  #054371;" text="COACHS" textFill="WHITE" />
+            <Button fx:id="coachs" layoutX="822.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: red;" text="COACHS" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/logo.png" />
+                  <Image url="@../../../../img/logo.png" />
                </image>
             </ImageView>
-            <Button fx:id="monEspace" layoutX="524.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: red;" text="MON ESPACE" textFill="WHITE" />
+            <Button fx:id="monEspace" layoutX="524.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
             <Button fx:id="shop" layoutX="656.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
             <Button fx:id="clients" layoutX="731.0" layoutY="16.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" text="CLIENTS" textFill="WHITE" />
          </children>
