--- a/src/main/resources/com/fitj/views/users/register-view.fxml
+++ b/src/main/resources/com/fitj/views/users/register-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerRegister">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.users.ControllerRegister">
     <children>
         <Pane layoutX="325.0" layoutY="171.0" prefHeight="516.0" prefWidth="351.0" style="-fx-background-color: #cdcdcd; -fx-border-color: black; -fx-border-radius: 10px; -fx-background-radius: 10px;">
             <children>
@@ -69,7 +69,7 @@
             <Button layoutX="807.0" layoutY="15.0" mnemonicParsing="false" style="-fx-background-color: red;" text="Nouveau ?" textFill="WHITE" />
             <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/logo.png" />
+                  <Image url="@../../../../img/logo.png" />
                </image>
             </ImageView>
          </children>
