--- a/src/main/resources/com/fitj/views/sports/create-sport.fxml
+++ b/src/main/resources/com/fitj/views/sports/create-sport.fxml
@@ -5,25 +5,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerMonEspace">
     <children>
-        <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
-            <children>
-                <Button fx:id="monCompte" layoutX="888.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color:  #054371;" text="MON COMPTE" textFill="WHITE" />
-                <Button fx:id="coachs" layoutX="808.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color:  #054371;" text="COACHS" textFill="WHITE" />
-                <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../../../../img/logo.png" />
-                    </image>
-                </ImageView>
-                <Button fx:id="monEspace" layoutX="520.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: red;" text="MON ESPACE" textFill="WHITE" />
-                <Button fx:id="shop" layoutX="647.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
-                <Button fx:id="clients" layoutX="721.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" text="CLIENTS" textFill="WHITE" />
-            </children>
-        </Pane>
       <Pane layoutX="138.0" layoutY="215.0" prefHeight="285.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
          <children>
             <Text fill="#054371" layoutX="132.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom du sport">
@@ -43,5 +30,23 @@
             <Font size="20.0" />
          </font>
       </Button>
+      <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
+         <children>
+              <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
+                  <children>
+                      <Button fx:id="monCompte" layoutX="888.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color:  #054371;" text="MON COMPTE" textFill="WHITE" />
+                      <Button fx:id="coachs" layoutX="808.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color:  #054371;" text="COACHS" textFill="WHITE" />
+                      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                              <Image url="@../../../../img/logo.png" />
+                          </image>
+                      </ImageView>
+                      <Button fx:id="monEspace" layoutX="520.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: red;" text="MON ESPACE" textFill="WHITE" />
+                      <Button fx:id="shop" layoutX="647.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
+                      <Button fx:id="clients" layoutX="721.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" text="CLIENTS" textFill="WHITE" />
+                  </children>
+              </Pane>
+         </children>
+      </VBox>
     </children>
 </Pane>
