update and delete sport

--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -58,8 +58,8 @@
                         <Button fx:id="addSportButton" layoutX="410.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToAddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
                         <ListView fx:id="listView" layoutX="18.0" layoutY="16.0" prefHeight="455.0" prefWidth="902.0" />
                         <Text fx:id="errorMessage" fill="RED" layoutX="276.0" layoutY="497.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-                        <Button fx:id="modifySportButton" layoutX="276.0" layoutY="530.0" mnemonicParsing="false" onAction="#modifySport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Modifier" textFill="WHITE" />
-                        <Button fx:id="deleteSportbutton" layoutX="544.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToAddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
+                        <Button fx:id="updateSportButton" layoutX="276.0" layoutY="530.0" mnemonicParsing="false" onAction="#goToUpdateSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Modifier" textFill="WHITE" />
+                        <Button fx:id="deleteSportbutton" layoutX="544.0" layoutY="530.0" mnemonicParsing="false" onAction="#deleteSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
                      </children>
                   </AnchorPane>
               </content>
