--- a/src/main/resources/com/fitj/views/clients/monEspace-client.fxml
+++ b/src/main/resources/com/fitj/views/clients/monEspace-client.fxml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -15,19 +9,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.clients.ControllerMonEspace">
    <children>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
-         <children>
-            <Button fx:id="monCompte" layoutX="897.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color: #054371;" text="MON COMPTE" textFill="WHITE" />
-            <Button fx:id="coachs" layoutX="822.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color: #054371;" text="COACHS" textFill="WHITE" />
-            <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../img/logo.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="monEspace" layoutX="618.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: red;" text="MON ESPACE" textFill="WHITE" />
-            <Button fx:id="shop" layoutX="748.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
-         </children>
-      </Pane>
+      <fx:include source="../../components/headers/header-client.fxml" />
       <Text fx:id="clientName" layoutX="32.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ClientName" wrappingWidth="241.2509765625">
          <font>
             <Font name="System Bold" size="30.0" />
