--- a/src/main/resources/com/fitj/views/sports/update-sport.fxml
+++ b/src/main/resources/com/fitj/views/sports/update-sport.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -32,20 +30,7 @@
       </Button>
       <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
          <children>
-              <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;">
-                  <children>
-                      <Button fx:id="monCompte" layoutX="888.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonCompte" style="-fx-background-color:  #054371;" text="MON COMPTE" textFill="WHITE" />
-                      <Button fx:id="coachs" layoutX="808.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToCoachs" style="-fx-background-color:  #054371;" text="COACHS" textFill="WHITE" />
-                      <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-                          <image>
-                              <Image url="@../../../../img/logo.png" />
-                          </image>
-                      </ImageView>
-                      <Button fx:id="monEspace" layoutX="520.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: red;" text="MON ESPACE" textFill="WHITE" />
-                      <Button fx:id="shop" layoutX="647.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
-                      <Button fx:id="clients" layoutX="721.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToClients" prefHeight="25.0" prefWidth="78.0" style="-fx-background-color: #054371;" text="CLIENTS" textFill="WHITE" />
-                  </children>
-              </Pane>
+              <fx:include source="../../components/headers/header-admin.fxml" />
          </children>
       </VBox>
     </children>
