--- a/src/main/resources/com/fitj/components/headers/header-coach.fxml
+++ b/src/main/resources/com/fitj/components/headers/header-coach.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="55.0" prefWidth="1000.0" style="-fx-border-style: hidden none solid none; -fx-border-color: #054371; -fx-border-width: 2;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.headers.ControllerHeaderCoach">
     <children>
@@ -17,5 +18,6 @@
         <Button fx:id="monEspace" layoutX="601.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMonEspace" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MON ESPACE" textFill="WHITE" />
         <Button fx:id="shop" layoutX="731.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToShop" prefHeight="25.0" prefWidth="63.0" style="-fx-background-color: #054371;" text="SHOP" textFill="WHITE" />
         <Button fx:id="mesClients" layoutX="473.0" layoutY="15.0" mnemonicParsing="false" onAction="#goToMesClients" prefHeight="25.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="MES CLIENTS" textFill="WHITE" />
+      <Text fx:id="errorText" fill="RED" layoutX="137.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="287.2275390625" />
     </children>
 </Pane>
