--- a/src/main/resources/com/fitj/views/users/register-view.fxml
+++ b/src/main/resources/com/fitj/views/users/register-view.fxml
@@ -12,7 +12,7 @@
                 <Text fill="#054371" layoutX="59.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adresse mail" wrappingWidth="92.13671875" />
                 <Text fill="#054371" layoutX="59.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pseudo" wrappingWidth="92.13671875" />
                 <TextField fx:id="pseudo" layoutX="59.0" layoutY="88.0" prefHeight="25.0" prefWidth="234.0" />
-                <Text fx:id="errorMessage" fill="RED" layoutX="30.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
+                <Text fx:id="errorText" fill="RED" layoutX="30.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="292.0" />
                 <Text fill="#054371" layoutX="59.0" layoutY="351.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de passe" wrappingWidth="92.13671875" />
                 <Text fill="#054371" layoutX="59.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirmation de mot de passe" wrappingWidth="170.5367431640625" />
             <Text fill="#054371" layoutX="59.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Poids" wrappingWidth="92.13671875" />
