--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerMonEspace">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerAdminMonEspace">
    <children>
        <fx:include source="../../components/headers/header-admin.fxml" />
       <Text fx:id="adminName" layoutX="32.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="AdminName" wrappingWidth="241.2509765625">
@@ -37,7 +37,11 @@
                           <tabs>
                             <Tab text="Recettes">
                               <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                      <children>
+                                          <fx:include source="../../components/recettes/list-recette.fxml" />
+                                      </children>
+                                  </AnchorPane>
                               </content>
                             </Tab>
                             <Tab text="Aliments">
